twentythirteen-www-tg/Less/global.less
/* ... */
#references { 
    padding : 40px 0 0 0;

    img {margin:10px 25px 10px 25px;}

    h2 {
        .my-font-size(45); //45px
        .my-line-height(20); //20px
        color: #4d4d4d;
        margin-bottom: 0;
    }

    p{
        .my-font-size(20); //20px
        .my-line-height(20); //20px
        color: #666666;
    }
}

#evaluate {
    padding : 60px 0 130px 0;
    a {
        font-family: montserrat;
        color: @button-color;   
    }
    p {margin-bottom:0;}
}

#button_evaluate {
    font-weight:bold;
    .my-font-size(26); //26px
    padding: 10px 20px 6px;
}

.button {
    display:inline-block;
    vertical-align: middle;
    font-family: montserrat;
    color: @button-color;   
    .linear-gradient (@gradient-red-start; @gradient-red-end);
    //.linear-gradient (rgba(0,0,0,0); rgba(0,0,0,0.05)); //@@@TODO
    border-bottom: 5px solid #A00 ;
    border-radius: 4px;
}

/**
 * Contact page
 * -----------------------------------------------------------------------------
 */
#contact {
    padding: 15px 0 30px 0;
    background-color: #FAFAFA;
}

#page_title {
    padding: 15px 0 15px 0;
    max-width: 960px;
    margin: auto;
        h1 {
        .my-font-size(25);
        color: #4d4d4d;
    }
}

#contact_area {
    max-width: 960px;
    margin: auto;
    
    article {
        .my-font-size(18);
        .my-line-height(28);
        color: #666;
        display: inline-block;
        vertical-align: top;
        padding : 15px 50px;
       
        a {color:#666;}
    }
}

#contact_form {
    border-right: 0.1px solid #D1D1D1;
    input, 
    select, 
    textarea {width: 85%;}
}

#nickname {display: none;}

abbr[title], abbr[data-original-title] {
    border-bottom: 1px dotted #999999;
    cursor: help;
}
.mandatory {
    color: #FF0000;
}

#form_button {
    .my-font-size(20);
    .linear-gradient (@gradient-red-start; @gradient-red-end);
    //.linear-gradient (rgba(0,0,0,0); rgba(0,0,0,0.05)); //@@@TODO
    font-family: montserrat;
    font-weight: bold;
    color: @button-color;   
    border-bottom: 5px solid #A00 ;
    border-radius: 4px;
    vertical-align: middle;
}


#team {
    max-width: 960px;
    margin: auto;
    padding: 30px 0 0 0;
    h2 {
        .my-font-size(21);
        .my-line-height(21);
        color: #4d4d4d;
        margin: 15px 0 15px 0;
    }
    article {
        .my-font-size(17);
        .my-line-height(20);
        color: #666;
        display:inline-block;
        vertical-align: top;
        padding: 0 15px;
        margin-left: 18px;
        width: 300px;
    }
    ul {padding-left:20px;}

    a {color:#666;}
}
.twitter_bullet {
    list-style-image: url(Images/Social/twitter_bullet.png);
}
  
.linkedin_bullet {list-style-image: url(Images/Social/linkedin_bullet.png);}
/* ... */

